--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,9 @@ a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the 
 entire idea folder.
 #.idea/
+
+# Custom
+simpeval/
+.SECRET
+pytorch_model.bin
+data/parsing/
