--- a/.gitignore
+++ b/.gitignore
@@ -193,5 +193,6 @@ admissions/
 clinical-notes/
 medical-transcriptions/
 devaraj-medical/
-batches/
+# batches/
 fest-ability/
+cross-dataset-batches/
